# sp_ask_school_data_crunching

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: configuration.md  usage.md  windows_setup.md
sp_ask_school_data_crunching/: __init__.py  data_processing.py  fetch_chats.py
sp_ask_school_data_crunching/analytics/: __init__.py  school_analytics.py  service_analytics.py  trend_analysis.py
sp_ask_school_data_crunching/utils/: config_helper.py
